Fixed a padding issue with the SHiFT Code panel source link

--- a/assets/styles/sass/local/shift.scss
+++ b/assets/styles/sass/local/shift.scss
@@ -507,8 +507,7 @@ main {
               &:active                         { opacity: 0.75; }
 
               .fas {
-                padding-right: 6px;
-                overflow: hidden;
+                padding-right: 8px;
               }
               .text {
                 overflow: hidden;
